--- a/RedDeGasoductos.ipynb
+++ b/RedDeGasoductos.ipynb
@@ -695,7 +695,7 @@
     "colab": {
       "name": "RedDeGasoductos.ipynb",
       "provenance": [],
-      "toc_visible": true,
+      "collapsed_sections": [],
       "mount_file_id": "1a29x4s6-6SOgzPLa3T55nFLpezU4k6S3",
       "authorship_tag": "ABX9TyOO8ARBbg8El6KXCbDGK3Eh",
       "include_colab_link": true
